--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,9 @@
 RewriteEngine On
+
+# Se o seu projeto estiver em uma subpasta como htdocs/contas/public, 
+# descomente a linha abaixo e ajuste o caminho:
+# RewriteBase /nome-da-sua-pasta/public/
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
