--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Contas a Pagar",
-  "short_name": "Contas",
+  "short_name": "Contas a Pagar",
   "description": "Sistema de gestão de contas familiar",
   "start_url": "index.php",
   "display": "standalone",
