--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,19 +1,22 @@
 RewriteEngine On
 RewriteBase /
 
-# 1. Forçar o uso de HTTPS
+# 1. Forçar o uso de HTTPS (Essencial para PWA)
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# 2. Bloquear acesso direto a pastas sensíveis
+# 2. Bloquear acesso direto a pastas sensíveis (Segurança)
 RewriteRule ^(app|vendor|Core) - [F,L]
 
-# 3. EXCEÇÃO PARA PWA: Ignorar arquivos reais para evitar erro de MIME type
-# Se o arquivo existe fisicamente, entrega ele diretamente sem ir para o index.php
-RewriteCond %{REQUEST_FILENAME} -f
-RewriteRule ^(sw\.js|manifest\.json|.*\.png|.*\.css|.*\.js)$ - [L]
+# 3. EXCEÇÃO PARA ARQUIVOS REAIS (PWA e Assets)
+# Se o arquivo ou diretório existe fisicamente, entrega ele diretamente.
+# Isso impede que o index.php tente processar o sw.js ou manifest.json.
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
 
-# 4. Gerenciamento de Rotas Amigáveis (apenas para o que não é arquivo real)
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+# 4. Gerenciamento de Rotas Amigáveis
+# Tudo o que não for um arquivo real cai aqui.
+# Usamos uma condição para garantir que não estamos reescrevendo arquivos legítimos.
+RewriteCond %{REQUEST_URI} !index\.php
 RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
