--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,25 @@
 {
   "name": "Contas a Pagar",
-  "short_name": "Contas a Pagar",
+  "short_name": "Contas",
   "description": "Sistema de gestão de contas familiar",
-  "start_url": "/",
+  "id": "/",
+  "start_url": "/login.php",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0d6efd",
+  "scope": "/",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
